load book and category from mongoDB

--- a/views/home/index.pug
+++ b/views/home/index.pug
@@ -8,221 +8,21 @@ block content
                 .col-5.title-right.mt-2
                     a(href="#") Xem thêm&raquo;
             .row.hot-list-content
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                    
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
+                each book in listBook
+                    .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
+                        a(href="/detail/"+book.slug)
+                            img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src=book.image, alt="")
+                        .pl-2.pr-2.mr-3.book-title-group
+                            a.book-title(href="/detail/"+book.slug) 
+                                h6.text-center.mt-2=book.title
+                        .position-absolute.pl-2.pr-2.count-view-group
+                            i.fas.fa-eye=book.view
         .col-12.bg-light.border.new-list
             .row.new-list-title.border-bottom
                 .col-7.title-left
                     h5 SÁCH MỚI CẬP NHẬT
                 .col-5.title-right.mt-2
                     a(href="#") Xem thêm&raquo;
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
-            .row.chapter-content
-                a(href="#").col-9.book-title 
-                    lable - Đấu La Đại Lục: Ý Trung Nhân
-                .col-3.chapter Chương 285
             .row.chapter-content
                 a(href="#").col-9.book-title 
                     lable - Đấu La Đại Lục: Ý Trung Nhân
