--- a/views/home/category.pug
+++ b/views/home/category.pug
@@ -4,114 +4,63 @@ block content
         .col-12.bg-light.border.hot-list.mb-2
             .row.hot-list-title.border-bottom
                 .col-12.title-left
-                    h5 Category 1
+                    h5= "Chủ Đề: " + selectCategory.category
             .row.hot-list-content
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail") 
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
-                .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
-                    a(href="/detail")
-                        img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto", src="https://picsum.photos/210/300", alt="")
-                    .pl-2.pr-2.mr-3.book-title-group
-                        a.book-title(href="/detail")
-                            h6.text-center.mt-2 Machine Learning Cơ Bản
-                    .position-absolute.pl-2.pr-2.count-view-group
-                        i.fas.fa-eye  123456789
+                if booksByCategory.length === 0
+                    p.text-center Sách đang được cập nhật!
+                else
+                    each book in booksByCategory
+                        .col-md-4.col-12.mt-2.mb-2.hot-list-content.position-relative
+                            a(href="/detail/"+book.slug)
+                                img.img-fluid.book-cover.mx-auto.d-block(max-width="100%", height="auto",src=book.image, alt="")
+                            .pl-2.pr-2.mr-3.book-title-group
+                                a.book-title(href="/detail/"+book.slug) 
+                                    h6.text-center.mt-2=book.title
+                            .position-absolute.pl-2.pr-2.count-view-group
+                                i.fas.fa-eye=book.view
                 .col-12
-                    nav(aria-label='Page navigation example')
+                    nav(aria-label='Category Page Navigation')
                         ul.pagination.justify-content-center
-                            li.page-item.disabled
-                                a.page-link(href='#') Previous
-                            li.page-item.active
-                                a.page-link(href='#') 1
-                            li.page-item
-                                a.page-link(href='#') 2
-                            li.page-item
-                                a.page-link(href='#') 3
-                            li.page-item
-                                a.page-link(href='#') Next
+                            if currentPage === 1
+                                li.page-item.disabled
+                                    a.page-link(href='#') Previous
+                                li.page-item.active
+                                    a.page-link= currentPage
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage + 1))= currentPage + 1
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage + 2))= currentPage + 2
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage + 3)) Next
+                            else if currentPage >= totalPage
+                                if currentPage !== 2
+                                    li.page-item
+                                        a.page-link(href='?page='+(currentPage - 3)) Previous
+                                    li.page-item
+                                        a.page-link(href='?page='+(currentPage - 2))= currentPage - 2
+                                    li.page-item
+                                        a.page-link(href='?page='+(currentPage - 1))= currentPage - 1
+                                    li.page-item.active
+                                        a.page-link= currentPage
+                                    li.page-item.disabled
+                                        a.page-link(href='#') Next
+                                else 
+                                    li.page-item.disabled
+                                        a.page-link(href='?page='+(currentPage - 1)) Previous
+                                    li.page-item
+                                        a.page-link(href='?page='+(currentPage - 1))= currentPage - 1
+                                    li.page-item.active
+                                        a.page-link= currentPage
+                                    li.page-item.disabled
+                                        a.page-link Next
+                            else
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage - 2)) Previous
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage - 1))= currentPage - 1
+                                li.page-item.active
+                                    a.page-link= currentPage
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage + 1))= currentPage + 1
+                                li.page-item
+                                    a.page-link(href='?page='+(currentPage + 2)) Next
